開發 Device CRUD